fixed spacing issue in footer

--- a/styles/sass/partials/_footer.scss
+++ b/styles/sass/partials/_footer.scss
@@ -28,7 +28,7 @@ footer{
             }
 
             :nth-child(3) {
-                line-height: 0.5;
+                line-height: 1.5;
                 padding-bottom: 20px;
             }
 
