--- a/styles/style.css
+++ b/styles/style.css
@@ -1293,7 +1293,7 @@ footer .footerFlexContainer .contactInfo :nth-child(n+2) {
   padding-bottom: 20px;
 }
 footer .footerFlexContainer .contactInfo :nth-child(3) {
-  line-height: 0.5;
+  line-height: 1.5;
   padding-bottom: 20px;
 }
 footer .footerFlexContainer .contactInfo :last-child {
